apps/base/ttrss/ingress-middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ttrss-auth
  namespace: ttrss
spec:
  basicAuth:
    secret: ttrss-basic-auth
