apps/base/ttrss/postgres-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: db
  namespace: ttrss
spec:
  containers:
  - name: db
    image: postgres:12-alpine
    volumeMounts:
    - mountPath: "/var/lib/postgresql/data"
      name: database
  volumes:
  - name: database
    persistentVolumeClaim:
        claimName: database
