apps/base/ttrss/ttrss-fpm-pgsql-static-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: app
  namespace: ttrss
  labels:
    app: app
spec:
  containers:
  - name: app
    image: cthulhoo/ttrss-fpm-pgsql-static
    volumeMounts:
    - mountPath: "/var/www/html"
      name: app
    - mountPath: "/opt/tt-rss/config.d"
      name: config
      readOnly: true
  volumes:
  - name: app
    persistentVolumeClaim:
        claimName: app
  - name: config
    persistentVolumeClaim:
        claimName: config
        readOnly: true
---
apiVersion: v1
kind: Pod
metadata:
  name: backups
  namespace: ttrss
spec:
  containers:
  - name: backups
    image: cthulhoo/ttrss-fpm-pgsql-static
    command: ["/opt/tt-rss/dcron.sh", "-f"]
    volumeMounts:
    - mountPath: "/var/www/html"
      name: app
    - mountPath: "/backups"
      name: backups
  volumes:
  - name: app
    persistentVolumeClaim:
        claimName: app
  - name: backups
    persistentVolumeClaim:
        claimName: backups
---
apiVersion: v1
kind: Pod
metadata:
  name: updater
  namespace: ttrss
spec:
  containers:
  - name: updater
    image: cthulhoo/ttrss-fpm-pgsql-static
    command: ["/opt/tt-rss/updater.sh"]
    volumeMounts:
    - mountPath: "/var/www/html"
      name: app
    - mountPath: "/opt/tt-rss/config.d"
      name: config
      readOnly: true
  volumes:
  - name: app
    persistentVolumeClaim:
        claimName: app
  - name: config
    persistentVolumeClaim:
        claimName: config
        readOnly: true
