apps/base/ttrss/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ttrss-service
  namespace: ttrss
spec:
  selector:
    app: ttrss-web-nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: ttrss
spec:
  selector:
    app: app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  - protocol: TCP
    port: 9000
    targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: ttrss
spec:
  selector:
    name: db
